--- a/Website/visualization4.html
+++ b/Website/visualization4.html
@@ -9,23 +9,25 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>vs. Wind Speed</title>
+        <title>Wind Speed</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="bootstrap.min.css">
+
     </head>
 
     <body>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand">Latitude</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link"  href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="comparisons.html">Comparisons</a>
@@ -34,21 +36,21 @@
                     <a class="nav-link" href="data.html">Data</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle active" aria-current="page" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Plots
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="visualization1.html">vs.Max Temperature</a></li>
-                      <li><a class="dropdown-item" href="visualization2.html">vs. Humidity</a></li>
-                      <li><a class="dropdown-item" href="visualization3.html">vs. Cloudiness</a></li>
-                      <li><a class="dropdown-item" href="visualization4.html">vs. Wind Speed</a></li>
+                      <li><a class="dropdown-item" href="visualization1.html">Max Temperature</a></li>
+                      <li><a class="dropdown-item" href="visualization2.html">Humidity</a></li>
+                      <li><a class="dropdown-item" href="visualization3.html">Cloudiness</a></li>
+                      <li><a class="dropdown-item active" aria-current="page" href="visualization4.html">Wind Speed</a></li>
                     </ul>
                   </li>
                 </ul>
               </div>
             </div>
           </nav>
-        <h1>vs. Wind Speed</h1>
+        <h1>Wind Speed</h1>
         <a target="_blank" href="..//Resources//assets//images//Fig4.png">
             <img src="..//Resources//assets//images//Fig4.png" alt="vs. Wind Speed">
         </a>
