--- a/Website/comparisons.html
+++ b/Website/comparisons.html
@@ -16,6 +16,7 @@ and 1 across on extra-small and small screens. -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="bootstrap.min.css">
+        <link href ='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css'  rel="stylesheet">
 
     </head>
 
@@ -30,42 +31,45 @@ and 1 across on extra-small and small screens. -->
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="index.html"><i class="fa-solid fa-house"></i> Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="comparisons.html">Comparisons</a>
+                    <a class="nav-link active" aria-current="page" href="comparisons.html"><i class="fa-solid fa-ruler-combined"></i> Comparisons</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="data.html">Data</a>
+                    <a class="nav-link" href="data.html"><i class="fa-solid fa-table-cells"></i> Data</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Plots
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Plots
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="visualization1.html">Max Temperature</a></li>
-                      <li><a class="dropdown-item" href="visualization2.html">Humidity</a></li>
-                      <li><a class="dropdown-item" href="visualization3.html">Cloudiness</a></li>
-                      <li><a class="dropdown-item" href="visualization4.html">Wind Speed</a></li>
+                      <li><a class="dropdown-item" href="visualization1.html">
+                        <i class="fa-solid fa-temperature-half"></i> Max Temperature</a></li>
+                      <li><a class="dropdown-item" href="visualization2.html"><i class="fa-solid fa-droplet"></i> Humidity</a></li>
+                      <li><a class="dropdown-item" href="visualization3.html"><i class="fa-solid fa-cloud"></i> Cloudiness</a></li>
+                      <li><a class="dropdown-item" href="visualization4.html"><i class="fa-solid fa-wind"></i> Wind Speed</a></li>
                     </ul>
                   </li>
                 </ul>
               </div>
             </div>
           </nav>
+          <p>
+          Click on any plot to get an in-depth analysis.  
+          </p>
         <div class="container">
             <div class="row">
                 <!-- First of two columns -->
                 <div class="col-md-6">
                     <h1>Max Temperature</h1>
-                    <a target="_blank" href="..//Resources//assets//images//Fig1.png">
+                    <a href="visualization1.html">
                         <img class="comparison" src="..//Resources//assets//images//Fig1.png" alt="vs.Max Temperature"></a>
                 </div>
         
                 <!-- Second of two columns -->
                 <div class="col-md-6">
                     <h1>Humidity</h1>
-                    <a  target="_blank" href="..//Resources//assets//images//Fig2.png">
+                    <a href="visualization2.html">
                         <img class="comparison" src="..//Resources//assets//images//Fig2.png" alt="vs. Humidity"></a>
                 </div>
             </div>
@@ -74,14 +78,14 @@ and 1 across on extra-small and small screens. -->
                 <!-- First of two columns -->
                 <div class="col-md-6">
                     <h1>Cloudiness</h1>
-                    <a target="_blank" href="..//Resources//assets//images//Fig3.png">
+                    <a href="visualization3.html">
                         <img class="comparison" src="..//Resources//assets//images//Fig3.png" alt="vs. Cloudiness"></a>
                 </div>
             
                 <!-- Second of two columns -->
                 <div class="col-md-6">
                     <h1>Wind Speed</h1>
-                    <a  target="_blank" href="..//Resources//assets//images//Fig4.png"></a>
+                    <a href="visualization4.html"></a>
                         <img class="comparison" src="..//Resources//assets//images//Fig4.png" alt="vs. Wind Speed"></a>
                 </div>
             </div>
