--- a/Website/data.html
+++ b/Website/data.html
@@ -18,6 +18,7 @@ table from a pandas dataframe. See the documentation here -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="bootstrap.min.css">
+        <link href ='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css'  rel="stylesheet">
 
     </head>
 
@@ -32,23 +33,23 @@ table from a pandas dataframe. See the documentation here -->
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="index.html"><i class="fa-solid fa-house"></i> Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="comparisons.html">Comparisons</a>
+                    <a class="nav-link" href="comparisons.html"><i class="fa-solid fa-ruler-combined"></i> Comparisons</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="data.html">Data</a>
+                    <a class="nav-link active" aria-current="page" href="data.html"><i class="fa-solid fa-table-cells"></i> Data</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Plots
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Plots
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="visualization1.html">Max Temperature</a></li>
-                      <li><a class="dropdown-item" href="visualization2.html">Humidity</a></li>
-                      <li><a class="dropdown-item" href="visualization3.html">Cloudiness</a></li>
-                      <li><a class="dropdown-item" href="visualization4.html">Wind Speed</a></li>
+                      <li><a class="dropdown-item" href="visualization1.html">
+                        <i class="fa-solid fa-temperature-half"></i> Max Temperature</a></li>
+                      <li><a class="dropdown-item" href="visualization2.html"><i class="fa-solid fa-droplet"></i> Humidity</a></li>
+                      <li><a class="dropdown-item" href="visualization3.html"><i class="fa-solid fa-cloud"></i> Cloudiness</a></li>
+                      <li><a class="dropdown-item" href="visualization4.html"><i class="fa-solid fa-wind"></i> Wind Speed</a></li>
                     </ul>
                   </li>
                 </ul>
