--- a/Website/index.html
+++ b/Website/index.html
@@ -16,6 +16,7 @@ and clicking an image should take the user to that visualization. -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="bootstrap.min.css">
+        <link href ='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css'  rel="stylesheet">
 
     </head>
 
@@ -27,26 +28,27 @@ and clicking an image should take the user to that visualization. -->
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
+
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html"><i class="fa-solid fa-house"></i> Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="comparisons.html">Comparisons</a>
+                    <a class="nav-link" href="comparisons.html"><i class="fa-solid fa-ruler-combined"></i> Comparisons</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="data.html">Data</a>
+                    <a class="nav-link" href="data.html"><i class="fa-solid fa-table-cells"></i> Data</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Plots
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Plots
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="visualization1.html">Max Temperature</a></li>
-                      <li><a class="dropdown-item" href="visualization2.html">Humidity</a></li>
-                      <li><a class="dropdown-item" href="visualization3.html">Cloudiness</a></li>
-                      <li><a class="dropdown-item" href="visualization4.html">Wind Speed</a></li>
+                      <li><a class="dropdown-item" href="visualization1.html">
+                        <i class="fa-solid fa-temperature-half"></i> Max Temperature</a></li>
+                      <li><a class="dropdown-item" href="visualization2.html"><i class="fa-solid fa-droplet"></i> Humidity</a></li>
+                      <li><a class="dropdown-item" href="visualization3.html"><i class="fa-solid fa-cloud"></i> Cloudiness</a></li>
+                      <li><a class="dropdown-item" href="visualization4.html"><i class="fa-solid fa-wind"></i> Wind Speed</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -57,12 +59,19 @@ and clicking an image should take the user to that visualization. -->
             Sumarry: Latitude vs. X
         </h1>
 
+        <div>
+          <div class = "row">
+          <div class = "col-md-7">
         <p>
-            My name is Yoshikage Kira. I’m 33 years old. My house is in the northeast section of Morioh, where all the villas are, and I am not married. I work as an employee for the Kame Yu department stores, and I get home every day by 8 PM at the latest. I don’t smoke, but I occasionally drink. I’m in bed by 11 PM, and make sure I get eight hours of sleep, no matter what. After having a glass of warm milk and doing about twenty minutes of stretches before going to bed, I usually have no problems sleeping until morning. Just like a baby, I wake up without any fatigue or stress in the morning. I was told there were no issues at my last check-up. I’m trying to explain that I’m a person who wishes to live a very quiet life. I take care not to trouble myself with any enemies, like winning and losing, that would cause me to lose sleep at night. That is how I deal with society, and I know that is what brings me happiness. Although, if I were to fight I wouldn’t lose to anyone.
-            <br>
-            There's only one way to catch these guys. "Leave no stone unturned and think outside the box", they said. I get "leaving no stone unturned". Any idiot would. I mean, who hasn't turned over rocks to find stuff? BUT WHAT THE HELL IS "THINKING OUTSIDE THE BOX" EVEN SUPPOSED TO MEAN?! MAYBE I THINK BETTER IN THERE! DAMN IT! SO MY BRAIN'S IN A BOX NOW?! THAT'S THE DUMBEST THING I'VE EVER HEARD! THINK I'M AN IDIOT, CAZZO?! Everyone knows the capital of France. But English speakers pronounce it "Paris", while most say "Paree", the way it's supposed to be. But somehow, "Venice" has replaced the real "Venezia" as the global standard. Like those stories, The “Merchant of Venice” and “Death in Venice”... WHY?! CALL THE DAMN BOOK “DEATH IN VENEZIA!” IT'S NOT THAT HARD! ARE WE NOT GOOD ENOUGH?! LEARN A LITTLE ITALIAN, PUTTANA, AND CALL THE THING WHAT IT'S SUPPOSED TO BE! WHAT KIND OF POMPOUS BULLSHIT ARE THEY ON ABOUT?!
+          The purpose of this project was to analyze how weather changes as you get closer to the equator. 
+          To accomplish this analisis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.
+          <br>
+          After assembling the datset, we used Matplotlib to plot various aspects of the weather vs. latitude. 
+          Factors we looked at included: temperature cloudiness, wind speed, and hunidity. This site provides the source data and visualizations 
+          ceated as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.
         </p>
-
+      </div>
+      <div class="col-md-5">
         <h1>
             Visualizations
         </h1>
@@ -71,14 +80,14 @@ and clicking an image should take the user to that visualization. -->
                 <!-- First of two columns -->
                 <div class="col-md-6">
                     <h1>Max Temperature</h1>
-                    <a target="_blank" href="..//Resources//assets//images//Fig1.png">
+                    <a href="visualization1.html">
                         <img class="comparison" src="..//Resources//assets//images//Fig1.png" alt="vs.Max Temperature"></a>
                 </div>
         
                 <!-- Second of two columns -->
                 <div class="col-md-6">
                     <h1>Humidity</h1>
-                    <a  target="_blank" href="..//Resources//assets//images//Fig2.png">
+                    <a href="visualization2.html">
                         <img class="comparison" src="..//Resources//assets//images//Fig2.png" alt="vs. Humidity"></a>
                 </div>
             </div>
@@ -87,17 +96,20 @@ and clicking an image should take the user to that visualization. -->
                 <!-- First of two columns -->
                 <div class="col-md-6">
                     <h1>Cloudiness</h1>
-                    <a target="_blank" href="..//Resources//assets//images//Fig3.png">
+                    <a href="visualization3.html">
                         <img class="comparison" src="..//Resources//assets//images//Fig3.png" alt="vs. Cloudiness"></a>
                 </div>
             
                 <!-- Second of two columns -->
                 <div class="col-md-6">
                     <h1>Wind Speed</h1>
-                    <a  target="_blank" href="..//Resources//assets//images//Fig4.png"></a>
+                    <a href="visualization4.html">
                         <img class="comparison" src="..//Resources//assets//images//Fig4.png" alt="vs. Wind Speed"></a>
                 </div>
             </div>
+          </div>
         </div>
+      </div>
+    </div>
     </body>
 </html>
