--- a/Website/visualization4.html
+++ b/Website/visualization4.html
@@ -14,6 +14,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="bootstrap.min.css">
+        <link href ='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css'  rel="stylesheet">
 
     </head>
 
@@ -27,33 +28,81 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link"  href="index.html">Home</a>
+                    <a class="nav-link"  href="index.html"><i class="fa-solid fa-house"></i> Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="comparisons.html">Comparisons</a>
+                    <a class="nav-link" href="comparisons.html"><i class="fa-solid fa-ruler-combined"></i> Comparisons</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="data.html">Data</a>
+                    <a class="nav-link" href="data.html"><i class="fa-solid fa-table-cells"></i> Data</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle active" aria-current="page" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Plots
+                    <a class="nav-link dropdown-toggle active" aria-current="page" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Plots
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="visualization1.html">Max Temperature</a></li>
-                      <li><a class="dropdown-item" href="visualization2.html">Humidity</a></li>
-                      <li><a class="dropdown-item" href="visualization3.html">Cloudiness</a></li>
-                      <li><a class="dropdown-item active" aria-current="page" href="visualization4.html">Wind Speed</a></li>
+                      <li><a class="dropdown-item" href="visualization1.html">
+                        <i class="fa-solid fa-temperature-half"></i> Max Temperature</a></li>
+                      <li><a class="dropdown-item" href="visualization2.html"><i class="fa-solid fa-droplet"></i> Humidity</a></li>
+                      <li><a class="dropdown-item" href="visualization3.html"><i class="fa-solid fa-cloud"></i> Cloudiness</a></li>
+                      <li><a class="dropdown-item active" aria-current="page" href="visualization4.html"><i class="fa-solid fa-wind"></i> Wind Speed</a></li>
                     </ul>
                   </li>
                 </ul>
               </div>
             </div>
           </nav>
-        <h1>Wind Speed</h1>
-        <a target="_blank" href="..//Resources//assets//images//Fig4.png">
-            <img src="..//Resources//assets//images//Fig4.png" alt="vs. Wind Speed">
-        </a>
+          <div class="row">
+            <div class="col-md-7">
+              <h1>Wind Speed</h1>
+              <a target="_blank" href="..//Resources//assets//images//Fig4.png">
+                  <img src="..//Resources//assets//images//Fig4.png" alt="vs. Cloudiness">
+              </a>
+              <p>
+              It seems that the further away from the equator that you go, the higher the wind speed is. 
+              This may be related to differing temperature and air currents present at different locations. 
+              The lower wind speed around the equator may also be related to these factors.
+            </p>
+          </div>
+          <div class = "col-md-5">
+            <h1>
+              Visualizations
+          </h1>
+          <div class="container">
+            <div class="row">
+                <!-- First of two columns -->
+                <div class="col-md-6">
+                    <h1>Max Temperature</h1>
+                    <a href="visualization1.html">
+                        <img class="comparison" src="..//Resources//assets//images//Fig1.png" alt="vs.Max Temperature"></a>
+                </div>
+        
+                <!-- Second of two columns -->
+                <div class="col-md-6">
+                    <h1>Humidity</h1>
+                    <a href="visualization2.html">
+                        <img class="comparison" src="..//Resources//assets//images//Fig2.png" alt="vs. Humidity"></a>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <!-- First of two columns -->
+                <div class="col-md-6">
+                    <h1>Cloudiness</h1>
+                    <a href="visualization3.html">
+                        <img class="comparison" src="..//Resources//assets//images//Fig3.png" alt="vs. Cloudiness"></a>
+                </div>
+            
+                <!-- Second of two columns -->
+                <div class="col-md-6">
+                    <h1>Wind Speed</h1>
+                    <a href="visualization4.html">
+                        <img class="comparison" src="..//Resources//assets//images//Fig4.png" alt="vs. Wind Speed"></a>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     </body>
 
 </html>
