--- a/comparisons.html
+++ b/comparisons.html
@@ -63,14 +63,14 @@ and 1 across on extra-small and small screens. -->
                 <div class="col-md-6">
                     <h1>Max Temperature</h1>
                     <a href="visualization1.html">
-                        <img class="comparison" src="..//Resources//assets//images//Fig1.png" alt="vs.Max Temperature"></a>
+                        <img class="comparison" src="Resources//assets//images//Fig1.png" alt="vs.Max Temperature"></a>
                 </div>
         
                 <!-- Second of two columns -->
                 <div class="col-md-6">
                     <h1>Humidity</h1>
                     <a href="visualization2.html">
-                        <img class="comparison" src="..//Resources//assets//images//Fig2.png" alt="vs. Humidity"></a>
+                        <img class="comparison" src="Resources//assets//images//Fig2.png" alt="vs. Humidity"></a>
                 </div>
             </div>
             <br>
@@ -79,14 +79,14 @@ and 1 across on extra-small and small screens. -->
                 <div class="col-md-6">
                     <h1>Cloudiness</h1>
                     <a href="visualization3.html">
-                        <img class="comparison" src="..//Resources//assets//images//Fig3.png" alt="vs. Cloudiness"></a>
+                        <img class="comparison" src="Resources//assets//images//Fig3.png" alt="vs. Cloudiness"></a>
                 </div>
             
                 <!-- Second of two columns -->
                 <div class="col-md-6">
                     <h1>Wind Speed</h1>
                     <a href="visualization4.html"></a>
-                        <img class="comparison" src="..//Resources//assets//images//Fig4.png" alt="vs. Wind Speed"></a>
+                        <img class="comparison" src="Resources//assets//images//Fig4.png" alt="vs. Wind Speed"></a>
                 </div>
             </div>
         </div>
