--- a/comparisons.html
+++ b/comparisons.html
@@ -24,7 +24,7 @@ and 1 across on extra-small and small screens. -->
     <body>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand">Latitude</a>
+              <a class="navbar-brand navsmall">Latitude</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
