--- a/data.html
+++ b/data.html
@@ -26,7 +26,7 @@ table from a pandas dataframe. See the documentation here -->
     <body>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand">Latitude</a>
+              <a class="navbar-brand navsmall">Latitude</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
