--- a/visualization2.html
+++ b/visualization2.html
@@ -21,7 +21,7 @@
     <body>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand">Latitude</a>
+              <a class="navbar-brand navsmall">Latitude</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -55,8 +55,8 @@
           <div class="row">
           <div class="col-md-7">
         <h1>Humidity</h1>
-        <a target="_blank" href="..//Resources//assets//images//Fig2.png">
-            <img src="..//Resources//assets//images//Fig2.png" alt="vs. Humidity">
+        <a target="_blank" href="Resources//assets//images//Fig2.png">
+            <img src="Resources//assets//images//Fig2.png" alt="vs. Humidity">
         </a>
         <p>
           Humidity seems to be relatively unrelated to the latitude at which it is measured. However, it does seem as 
