--- a/visualization3.html
+++ b/visualization3.html
@@ -21,7 +21,7 @@
     <body>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand">Latitude</a>
+              <a class="navbar-brand navsmall">Latitude</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -54,8 +54,8 @@
           <div class="row">
             <div class="col-md-7">
               <h1>Cloudiness</h1>
-              <a target="_blank" href="..//Resources//assets//images//Fig3.png">
-                  <img src="..//Resources//assets//images//Fig3.png" alt="vs. Cloudiness">
+              <a target="_blank" href="Resources//assets//images//Fig3.png">
+                  <img src="Resources//assets//images//Fig3.png" alt="vs. Cloudiness">
               </a>
               <p>
                 Cloudiness seems to be unrelated to the latitude in this graph. At higher latitudes, there do 
